[package]
name = "radio-music-box"
version = "0.1.0"
edition = "2024"

[dependencies]
async-watcher = "0.3.0"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.11", features = ["http1", "server", "tokio"] }
mp3lame-sys = "0.1.8"
rand = "0.9.1"
rubato = { version = "0.16.2", features = ["fft_resampler"] }
symphonia = { version = "0.5.4", features = ["all-formats", "mp3"] }
tokio = { version = "1.44.0", features = ["fs", "signal"] }
walkdir = "2.5.0"
